Make more room for status boxes to avoid overlapping the spec text

--- a/standard.css
+++ b/standard.css
@@ -1,7 +1,7 @@
 /* WHATWG Green: sRGB #3c790a, rgb(60, 121, 10) */
 
 html { margin: 0; padding: 0; background: white; color: black; }
-body { margin: 0 auto; padding: 0 1.5em 2em 2.5em; max-width: 80em; background: white; color: black; }
+body { margin: 0 auto; padding: 0 10em 2em 2.5em; max-width: 80em; background: white; color: black; }
 
 @keyframes fade-target {
   0%, 50% { background:yellow }
